--- a/q/275590.html
+++ b/q/275590.html
@@ -26,12 +26,27 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>401</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
-<tr d-ix="1"><td>246</td><td>ZX Spectrum 48K/128K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
-<tr d-ix="2"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
-<tr d-ix="3"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
+<tr d-ix="0"><td>677</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
+<tr d-ix="1"><td>401</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="2"><td>246</td><td>ZX Spectrum 48K/128K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
+<tr d-ix="3"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
+<tr d-ix="4"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, 401 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 677 bytes</h1>
+<pre class="lang-basic prettyprint-override"><code>data 131,147,165,196,262,294,330,392,523,587,659,784,1047,1175,1319,1568,2093
+data 110,123,131,165,220,247,262,330,440,494,523,659,880,988,1047,1319,1760
+data 131,147,165,196,262,294,330,392,523,587,659,784,1047,1175,1319,1568,2093
+data 87,98,110,131,175,196,220,262,349,392,440,523,698,784,880,1047,1397
+data 98,110,123,147,196,220,247,294,392,440,494,587,784,880,988,1175,1568
+data 104,123,156,185,208,247,311,370,415,494,622,740,831,988,1245,1480,1661
+data 116,139,165,208,233,277,330,415,466,554,659,831,932,1109,1319,1661,1865
+for j=1 to 7:dim m(16):for i=0 to 16:read m(i):next
+for i=0 to 16:s(m(i)):next:for i=0 to 15:s(m(15-i)):next:next
+sub s(n):sound n,.18,50:return
+</code></pre>
+<p>May have golfed the data too much by converting all the frequencies to integers. I am sure there is a better way of coding this using base frequencies and interesting formulae using powers of 2. But this is enough for today.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, 401 bytes</h1>
 <pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261,196,164,146
 $A=110,123,130,174,220,174,130,123
 $G=103,130,155,196,207,196,155,130
@@ -49,7 +64,7 @@ P $G 2
 <p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
 <p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell.</p>
 </div>
-<div id="pu1" class="pu"><h1>ZX Spectrum 48K/128K Basic, 246 bytes</h1>
+<div id="pu2" class="pu"><h1>ZX Spectrum 48K/128K Basic, 246 bytes</h1>
 <pre><code>  10 LET t=VAL &quot;.13&quot;: FOR i=SGN
 PI TO VAL &quot;8&quot;: READ a$,b$: FOR j
 =NOT PI TO INT PI: FOR k=SGN PI
@@ -105,7 +120,7 @@ ODE b$(k)-VAL a$: NEXT k: NEXT j
 </code></pre>
 <p>Tonic and arpeggio data.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/bear24rw/alsa-utils" rel="nofollow noreferrer">alsa-utils</a>, 190 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/bear24rw/alsa-utils" rel="nofollow noreferrer">alsa-utils</a>, 190 bytes</h1>
 <p>xxd dump:</p>
 <pre><code>00000000: 4d54 6864 0000 0006 0001 0002 00dc 4d54  MThd..........MT
 00000010: 726b 0000 0013 00ff 5103 07a1 2000 ff58  rk......Q... ..X
@@ -127,7 +142,7 @@ save code to a file, then</p>
 </code></pre>
 <p>as you can probably guess, this is just a straight up midi file I generated with the appropriate notes and tempo.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="noreferrer">MATL</a> (1 language), 78 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="noreferrer">MATL</a> (1 language), 78 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKe16:Y)tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
 </code></pre>
 <p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
