--- a/q/275590.html
+++ b/q/275590.html
@@ -26,13 +26,31 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>677</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
-<tr d-ix="1"><td>401</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="0"><td>379</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>677</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
 <tr d-ix="2"><td>246</td><td>ZX Spectrum 48K/128K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="3"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
 <tr d-ix="4"><td>078</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 677 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> 379 bytes</h1>
+<pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261,196,164,146
+$A=110,123,130,174,220,174,130,123
+$G=103,130,155,196,207,196,155,130
+function P($c,$h){for($i=0;$i-lt8;$i++){if($i-lt4){for($n=0;$n-lt4;$n++){[console]::Beep(($c[$n])*[math]::Pow(2,$i+$h/12),187)}}else{for($n=4;$n-lt8;$n++){[console]::Beep(($c[$n])*[math]::Pow(2,8-$i-1+$h/12),187)}}}}
+P $C 0
+P $A 0
+P $C 0
+P $A 0
+P $C -7
+P $C -5
+P $G 0
+P $G 2
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=lZGxboMwFEXVla9g8ACNUfyMMW4ihjQDKzvKUCEjkFw7CkQZEF_SJUuXflK_pjYmQ7t1OrrPV0eW7sfX2dzkZeikUvf753VsE_H9NKFjASnBwDgGzjC8cEw5LFwy4wE6FAC2QlO8VHOGKfVcMk0DVBZA1ucs8xaSe4vLKQnaq27G3uiwilCDURdPrblEqC_IHvWJGoXFZhNPfRstma0F7QraHSxcoW6MHoySp93uVcpzZHU10qf4uX5_Gzt7rcwtotjaULcFGmMQeTzPUg3yYWTeKP5nFIn9GPy2znNQhegYEoeDx9-U5Cszx9Kfy5D6DdYpHpP8AA" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
+<p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell.</p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, 677 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>data 131,147,165,196,262,294,330,392,523,587,659,784,1047,1175,1319,1568,2093
 data 110,123,131,165,220,247,262,330,440,494,523,659,880,988,1047,1319,1760
 data 131,147,165,196,262,294,330,392,523,587,659,784,1047,1175,1319,1568,2093
@@ -45,24 +63,6 @@ for i=0 to 16:s(m(i)):next:for i=0 to 15:s(m(15-i)):next:next
 sub s(n):sound n,.18,50:return
 </code></pre>
 <p>May have golfed the data too much by converting all the frequencies to integers. I am sure there is a better way of coding this using base frequencies and interesting formulae using powers of 2. But this is enough for today.</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, 401 bytes</h1>
-<pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261,196,164,146
-$A=110,123,130,174,220,174,130,123
-$G=103,130,155,196,207,196,155,130
-function P($c,$h){for($i=0;$i-lt8;$i++){if($i-lt4){for($n=0;$n-lt4;$n++){[console]::Beep(($c[$n%$c.Length])*[math]::Pow(2,$i + $h/12),187)}}else{for($n=4;$n-lt8;$n++){[console]::Beep(($c[$n%$c.Length])*[math]::Pow(2,8-$i-1+$h/12),187)}}}}
-P $C 0
-P $A 0
-P $C 0
-P $A 0
-P $C -7
-P $C -5
-P $G 0
-P $G 2
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=nZG9boMwFIXVlafwcCtBMK1tzE-pGNIMLB3YUYYKmYBE7SgQZYh4iM5dsnTpI_VpamMypGOnT-f66JOl8_m9VydxGFrR95fL13FsgvTn7gM2OQ0JpjzGNOaYPsWYxXTmnHnswDqnVFdYiOdqwjFjlnNmoQNFTsnyHEXWQhJrMTkkTnOU9dgpiUoXagytd27UwYUuJ8_QBf2Yavi-d-4ad858KUhTkOagYQpVreSgerHNshch9q7WVSDvoX54FXI3tltvVb2_aWZZqU4uw9AhH0H7SJmHaZp40yT6QVzt3NrT_9rTQH-X-jf-aXJKBBtEDNYWf1OQLIwMC3suELPLLANdh_oF" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
-<p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell.</p>
 </div>
 <div id="pu2" class="pu"><h1>ZX Spectrum 48K/128K Basic, 246 bytes</h1>
 <pre><code>  10 LET t=VAL &quot;.13&quot;: FOR i=SGN
