--- a/q/275590.html
+++ b/q/275590.html
@@ -26,14 +26,37 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
-<tr d-ix="1"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
-<tr d-ix="2"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
-<tr d-ix="3"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
-<tr d-ix="4"><td>340</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="0"><td>304</td><td>PowerShell</td><td>240918T153022Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275613#275613">bigyihsu</a></td></tr>
+<tr d-ix="1"><td>nan</td><td>CP1610 machine code</td><td>240919T013051Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275627#275627">Arnauld</a></td></tr>
+<tr d-ix="2"><td>077</td><td>MATL 1 language</td><td>240917T230511Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275600#275600">Luis Men</a></td></tr>
+<tr d-ix="3"><td>303</td><td>Chipmunk Basic</td><td>240918T153621Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275614#275614">roblogic</a></td></tr>
+<tr d-ix="4"><td>203</td><td>ZX Spectrum 48K Basic</td><td>240918T121524Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275609#275609">Neil</a></td></tr>
 <tr d-ix="5"><td>190</td><td>alsautils</td><td>240918T121158Z</td><td><a href="https://codegolf.stackexchange.com/questions/275590/play-the-final-fantasy-prelude/275608#275608">Themooni</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 137 DECLEs<sup>1</sup>=171.25 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> <s>379</s> <s>340</s> 304 bytes</h1>
+<pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261
+$A=110,123,130,174,220
+$G=103,130,155,196,207
+function P($c,$h){0..7|%{$i=$_;if($i-lt4){0..3|%{[console]::Beep(($c[$_])*[math]::Pow(2,$i+$h/12),187)}}else{4..1|%{[console]::Beep(($c[$_])*[math]::Pow(2,8-$i-1+$h/12),187)}}}}
+P $C 0
+P $A 0
+P $C 0
+P $A 0
+P $C -7
+P $C -5
+P $G 0
+P $G 2
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=jZC9boMwFEbVladguJGgNdTXGExSMaQZWNlRFFXICEsujgpRBsqTdMnSpY_Up6kTyJBMnY7uuX_S9_WzN0f50TVS69Pp-9DXQfr7QGGTYUQJ8oRgwgkuE8ISdGCdIVrNInJpC04Yow7kGdJZxfE0TYVTH9qqV6Z1Cw8qAo0_0DAUn4sBVAa7F1V7oALd84uPrC8r03ZGy-1q9Srl3rNrJey2_mP5_tY31hbm6DEC6gmaZ2Q-wVT44yh1Jwcehvj_E2lgX-PtmXF0Chc2Lj1jPeG-CsTM-Mx80rnLpuDm_K45_gE" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
+<p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell.</p>
+<ul>
+<li>-22 from general golfs</li>
+<li>-39 from replacing <code>for</code>-loops with ranges piped into <code>ForEach-Object</code>s.</li>
+<li>-36 from reusing the back 4 notes of the chords, in reverse, for the descending arpeggios.</li>
+</ul>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://en.wikipedia.org/wiki/General_Instrument_CP1600" rel="nofollow noreferrer">CP-1610</a> machine code, 137 DECLEs<sup>1</sup>=171.25 bytes</h1>
 <p><em><sup>1. CP-1610 instructions are encoded with 10-bit values (0x000 to 0x3FF), known as DECLEs. Although the Intellivision is also able to work on 16-bit data, programs were really stored in 10-bit ROM back then.</sup></em></p>
 <p>A fantasy console?!? Let's do it on a real one!</p>
 <p>This code is meant to be run on a PAL Intellivision (50Hz). It would also work on an NTSC system (60Hz), but at a different pitch and speed.</p>
@@ -194,7 +217,7 @@
 </ul>
 <p>The actual delta values are obtained by subtracting 5 to the stored values.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a> (1 language), <s>78</s> 77 bytes</h1>
 <pre><code>0'!4XC@nRAxt~&amp;'F5:ZaKeK1X&quot;tP[AaABOlHN]0Y(_&amp;vhYs&quot;1875:YPE*76/@12/W*Y,E]&amp;h1e4Y#
 </code></pre>
 <p>This uses equal temperament, with a C<sub>3</sub> frequency of 131.6 Hz (more accurate values could be achieved at the cost of 2 or 3 bytes, namely replacing <code>76</code> in the code by <code>76.4</code> or <code>76.45</code>).</p>
@@ -215,7 +238,7 @@
 <p>A <em>for each</em> loop (<code>&quot;</code>...<code>]</code>) reads each note, represented by the corresponding number <em>S</em>. To generate the waveform for each note, a time vector [1 2 ... 1875] is first generated (<code>1875:</code>). The length of this vector, when replayed at 10000 samples per second, determines a tempo of 80 bpm, as required. This vector is element-wise multiplied by 2*pi <code>(YPE*)</code>, divided by 76 (<code>76/</code>), and then multiplied by 2 raised to the number that results from dividing <em>S</em> by 12 (<code>@12/W*</code>). Applying the sine function (<code>Y,</code>) produces a 1×1875 vector with samples of a sinusoid of the frequency correponding to <em>S</em>. The values of this vector are multiplied by 2 (<code>E</code>). The last sinusoid contains NaN values and will produce no sound.</p>
 <p>The 257 resulting waveforms, each with 1875 samples, are concatened horizontally (<code>&amp;h</code>) into a single waveform. This waveform is then replayed, without scaling, at the indicated sample rate (<code>1e4Y#</code>). When replaying, sample values are clipped to the interval [1, −1].</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> 303 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.nicholson.com/rhn/basic/" rel="nofollow noreferrer">Chipmunk Basic</a>, <sub><s>677</s></sub> 303 bytes</h1>
 <pre class="lang-basic prettyprint-override"><code>data 0,2,4,7,-3,-1,0,4,0,2,4,7,-3,-1,0,4,-7,-5,-3,0,-5,-3,-1,2,-4,0,3,7,-2,2,5,9
 for k=0to 7:dim a(4):for i=1to 4:read a(i):next
 dim m(16):for i=0to 3:for j=1to 4:n=a(j)+12*i:m(j+4*i)=440*2^((n-21)/12):next:next
@@ -225,7 +248,7 @@ sub s(n):sound n,.18,50:return
 <p>The info about chords and octaves in the &quot;music theory&quot; section helped a lot.</p>
 <p><sub><s><a href="https://github.com/roblogic/golf/blob/46d9ed8a30eaa2785bd216b5188800784a5be9eb/basic/275590-play-the-final-fantasy-prelude.bas" rel="nofollow noreferrer">677 bytes</a></s> <em>: I am sure there is a better way of coding this ...</em></sub></p>
 </div>
-<div id="pu3" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
+<div id="pu4" class="pu"><h1>ZX Spectrum 48K Basic, <s>246</s> 203 bytes</h1>
 <pre><code>  10 LET t=VAL &quot;.14&quot;: LET a$=&quot;&lt;0
 247&lt;?0237&lt;&lt;0247&lt;?0237&lt;C0247&lt;A024
 7&lt;@047;&lt;&gt;047;&lt;&quot;: FOR i=SGN PI TO
@@ -286,28 +309,6 @@ $bDFA$BO5dfa$bDFA$BO7dfa$bafdO5$BAFD$bafdO3$BAFD
 </code></pre>
 <p>(Notes <code>C-GAB</code> are an octave above <code>c-gab</code>, so <code>O5CDEG</code> just means <code>O6cdeg</code>.)</p>
 <p>Edit: Saved 43 bytes thanks to @Arnauld's suggesting of indexing into a single data string.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/PowerShell/PowerShell" rel="nofollow noreferrer">PowerShell</a>, <s>401</s> <s>379</s> 340 bytes</h1>
-<pre class="lang-powershell prettyprint-override"><code>$C=130,146,164,196,261,196,164,146
-$A=110,123,130,174,220,174,130,123
-$G=103,130,155,196,207,196,155,130
-function P($c,$h){0..7|%{$i=$_;if($i-lt4){0..3|%{[console]::Beep(($c[$_])*[math]::Pow(2,$i+$h/12),187)}}else{4..7|%{[console]::Beep(($c[$_])*[math]::Pow(2,8-$i-1+$h/12),187)}}}}
-P $C 0
-P $A 0
-P $C 0
-P $A 0
-P $C -7
-P $C -5
-P $G 0
-P $G 2
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=jZCxboMwEIbVladguErQmNRnDKapGNIMrAzdUBRFyAhLLo4KUQbKk3TJ0qWP1KcpYDq0U6dP_393_0n_--fJXORrW0utr9ePc1cFydfNM-xSDClBHhOMOcGHmLAYZ86axw5sU8RxhYVkXhWcMGY5axY6kKVIl3EU2RQqbMqkQ-pU56bslGnc3IOSQO33dL0Wb7c9qBQOj6ryQAW647Mfjn5RmqY1Wu43mycpT954VsBh798VL8euHt3cXDxGQK2gvkfmE0yEPwxSt7LnNvqfEUkwvsbfMcPg5C7sXDpha_FXBWJhNDGzduYyW-7S8U_X3w" rel="nofollow noreferrer">Attempt This Online!</a></p>
-<p>An extremely brute-force solution, since I'm a novice at PowerShell golf. Defines a function <code>P</code> that plays a chord (array of numbers, truncated to the nearest integer) at a given half-step offset, first up 4 times then down 4 times. Each note is played using the builtin <code>[System.Console]::Beep</code> method.</p>
-<p>To run, paste this into a <code>.ps1</code> file, then run it in PowerShell.</p>
-<ul>
-<li>-22 from general golfs</li>
-<li>-39 from replacing <code>for</code>-loops with ranges piped into <code>ForEach-Object</code>s.</li>
-</ul>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/bear24rw/alsa-utils" rel="nofollow noreferrer">alsa-utils</a>, 190 bytes</h1>
 <p>xxd dump:</p>
